--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Kupon Tour</title>
+    <title>Kontak Me</title>
 </head>
 <body class="bg-dark">
-<!-- navbar start -->
+  <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Jo-jek</a>
@@ -26,12 +26,12 @@ integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WT
                 <a class="nav-link" href="/paket/bootstrap.html">Paket</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Other
                 </a>
-                <ul class="dropdown-menu bg-dark">
-                  <li><a class="dropdown-item text-light" href="/kontak/bootstrap.html" style="color: orangered; font-weight: 600;">Kontak</a></li>
-                  <li><a class="dropdown-item active text-light" href="/kupon/bootstrap.html" style="color: orangered; font-weight: 600;">kupon</a></li>
+                <ul class="dropdown-menu bg-dark ">
+                  <li><a class="dropdown-item active text-light" href="/kontak/bootstrap.html" style="color: orangered; font-weight: 600">Kontak</a></li>
+                  <li><a class="dropdown-item text-light" href="/kupon/bootstrap.html" style="color: orangered; font-weight: 600">kupon</a></li>
                 </ul>
               </li>
             </ul>
@@ -42,57 +42,29 @@ integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WT
           </div>
         </div>
       </nav>
-<!-- navbar end -->
+  <!-- navbar end -->
 
-<!-- first menu start -->
+          <!-- first menu start -->
     <div class="container-fluid text-light">
-      <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Kupon yang Tersedia Minggu ini🎁
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Setiap minggu kami menyediakan Kupon khusus untuk anda</strong> <br>
-              <i>Mohon Maaf Kupon untuk minggu ini sudah Habis</i> silahkan kembali lagi bsok<a style="color: red; cursor: pointer; text-decoration: none;" href="/bootstrap.html"> Besok</a>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Dapatkan bonus dari kupon tambahan🧧
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Anda bisa memeriksa Kupon anda disini </strong><br>
-              <i>Dengan kupon yang anda miliki anda bisa mendapatkan <span style="color: red; cursor: pointer">bonus </span>tambahan </i>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Kupon expired
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Tidak ada kupon yang terbuang</strong><br>
-              <p>Tentu saja akan berpengaruh tergantung berapa lama masa waktu kupon anda</p>
-              <i > <span style="color: blue; cursor: pointer">periksa Kupon anda</span> </i>
-            </div>
-          </div>
-        </div>
+      <div class="alert alert-info text-center" role="alert">
+        <h1>Kontak Saya</h1>
+        <p>
+          WhatsApp : 081943465698
+        </p>
       </div>
+      <div class="alert alert-dark text-center" role="alert">
+        <h1>Instagram</h1>
+        <p>@Johanfb10</p>
       </div>
+      <div class="alert alert-danger text-center" role="alert">
+        <h1>Email</h1>
+        <p>Johanfebriansyah2022@gmail.com</p>
+      </div>
+    </div>
 <!-- firs menu end -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
 </script>
 </body>
