--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-2" style="justify-content: center">
                   <button type="submit" class="btn btn-primary">
-                    <a href="/bootstrap.html" style="text-decoration: none; color: white">Login</a>
+                    <a href="/home.html" style="text-decoration: none; color: white">Login</a>
                   </button>
                 </div>
               </form>
